# pyproject-toml-cheat-sheet

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/: CODE_OF_CONDUCT.md
.github/workflows/: continuous-integration.yaml
src/pyproject_cheat_sheet/: __init__.py  string_formatter.py
tests/pyproject_cheat_sheet/: string_formatter_test.py
