[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1,<4"]

[project]
name = "pyproject-toml-cheat-sheet"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "you@yourdomain.com"},
]
description = "Python package developer's cheat sheet (using pyproject.toml)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "stringcase ~=1.2.0",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pylint ~=2.14.0",
    "pytest-cov ~=3.0.0",
    "toml ~=0.10.2",
    "yapf ~=0.32.0",
]

[tool.coverage.run]
source = ["src"]

[tool.flit.module]
name = "pyproject_cheat_sheet"

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # Variable name doesn't conform to snake_case naming style (invalid-name)
    "C0114", # Missing module docstring (missing-module-docstring)
    "C0115", # Missing class docstring (missing-class-docstring)
    "C0116", # Missing function or method docstring (missing-function-docstring)
    "R0903", # Too few public methods (1/2) (too-few-public-methods)
    "R0913", # Too many arguments (6/5) (too-many-arguments)
    "W0105", # String statement has no effect (pointless-string-statement)
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.yapf]
blank_line_before_nested_class_or_def = true
column_limit = 88
